--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     height: 100vh;
+
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-template-areas:
@@ -18,11 +19,15 @@ header {
     grid-area: header;
     background-color: rgb(24, 22, 22);
     color: #FFF7F0;
-    height: 70px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    height: 100%;
+}
+
+header h1{
+    padding: 10px;
 }
 
 aside {
@@ -32,6 +37,8 @@ aside {
     border-right: 1px rgba(27, 25, 25, 0.904) solid;
     flex-direction: column;
     align-items: start;
+    min-width: 200px; 
+    max-width: 400px; 
     
 }
 
@@ -56,6 +63,7 @@ main {
     background-color: #FFF7F0;
     display: grid;
     grid-template-columns: auto auto auto;
+    width: 100%;
 }
 
 
@@ -109,5 +117,9 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: bold;
+    height: 100%;
+}
+
+footer p{
+padding: 10px;
 }
